fix table header borders, alignment with rows

--- a/src/pages/discovery/discovery.scss
+++ b/src/pages/discovery/discovery.scss
@@ -42,8 +42,8 @@
 	width: 90vw;
 	margin-bottom: 2rem;
 	padding: 1rem 2rem;
-	background-color: rgba(0, 0, 0, 0.85);
-	border: 2px solid #C08FFF;
+	background-color: var(--dark-gray);
+	border: 2px solid var(--neon-purple);
 	font-size: 1.25rem;
 }
 
